--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@liou666/eslint-config-monorepo",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Liou's Eslint Config Rules",
   "author": "Liou (https://github.com/liou666)",
   "license": "MIT",
@@ -14,7 +14,9 @@
   },
   "scripts": {
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "lint:fix": "eslint . --fix",
+    "publish": "pnpm publish  -r --access public",
+    "release": "bumpp package.json packages/*/package.json --commit --push --tag&&pnpm publish  -r --access public"
   },
   "dependencies": {
     "@liou666/eslint-config": "*",
@@ -23,6 +25,7 @@
     "typescript": "^4.8.4"
   },
   "devDependencies": {
-    "@changesets/cli": "^2.25.0"
+    "@changesets/cli": "^2.25.0",
+    "bumpp": "^8.2.1"
   }
 }
