--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@liou666/eslint-config-monorepo",
+  "type": "module",
   "version": "1.0.0",
   "description": "Liou's Eslint Config Rules",
   "author": "Liou (https://github.com/liou666)",
@@ -14,7 +15,10 @@
   },
   "scripts": {
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "lint:fix": "eslint . --fix",
+    "pub": "pnpm publish  -r --access public",
+    "release": "node ./scripts/release"
+
   },
   "dependencies": {
     "@liou666/eslint-config": "*",
@@ -23,6 +27,7 @@
     "typescript": "^4.8.4"
   },
   "devDependencies": {
+    "@changesets/changelog-github": "^0.4.7",
     "@changesets/cli": "^2.25.0"
   }
 }
