--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   ],
   "main": "index.js",
   "engines": {
-    "node": ">=14",
+    "node": ">=14.6",
     "pnpm": ">=7.0.0"
   },
   "scripts": {
@@ -21,8 +21,10 @@
   },
   "dependencies": {
     "@liou666/eslint-config": "*",
+    "@liou666/eslint-config-react": "*",
     "@liou666/eslint-config-ts": "*",
     "eslint": "^8.25.0",
+    "react": "^18.2.0",
     "typescript": "^4.8.4"
   },
   "devDependencies": {
