--- a/packages/base/package.json
+++ b/packages/base/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@liou666/eslint-config-base",
-  "version": "1.4.1",
+  "version": "2.0.0",
   "description": "",
   "author": "liou",
   "license": "MIT",
@@ -16,16 +16,16 @@
     "eslint": ">=7"
   },
   "dependencies": {
-    "eslint-plugin-eslint-comments": "^3.2.0",
-    "eslint-plugin-html": "^7.1.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jsonc": "^2.4.0",
-    "eslint-plugin-markdown": "^3.0.0",
-    "eslint-plugin-n": "^15.3.0",
-    "eslint-plugin-promise": "^6.1.0",
-    "eslint-plugin-unicorn": "^44.0.2",
-    "eslint-plugin-yml": "^1.2.0",
-    "jsonc-eslint-parser": "^2.1.0",
-    "yaml-eslint-parser": "^1.1.0"
+    "eslint-plugin-eslint-comments": "3.2.0",
+    "eslint-plugin-html": "7.1.0",
+    "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-jsonc": "2.4.0",
+    "eslint-plugin-markdown": "3.0.0",
+    "eslint-plugin-n": "15.3.0",
+    "eslint-plugin-promise": "6.1.0",
+    "eslint-plugin-unicorn": "44.0.2",
+    "eslint-plugin-yml": "1.2.0",
+    "jsonc-eslint-parser": "2.1.0",
+    "yaml-eslint-parser": "1.1.0"
   }
 }
