--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@liou666/eslint-config-react",
-  "version": "1.4.1",
+  "version": "2.0.0",
   "description": "",
   "author": "Liou",
   "license": "MIT",
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@liou666/eslint-config-ts": "workspace:*",
-    "eslint-plugin-react": "^7.31.10",
-    "eslint-plugin-react-hooks": "^4.6.0"
+    "eslint-plugin-react": "7.31.10",
+    "eslint-plugin-react-hooks": "4.6.0"
   }
 }
