--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "compilerOptions": {
     "baseUrl": ".",
-    "lib": ["ESNext"]
+    "esModuleInterop": true
   },
+
   "include": ["./**/*.ts"]
 }
