--- a/packages/eslint-conflg-flat/tsconfig.json
+++ b/packages/eslint-conflg-flat/tsconfig.json
@@ -3,10 +3,14 @@
     "target": "ESNext",
     "baseUrl": ".",
     "module": "ESNext",
-    "moduleResolution": "Bundler",
+    "moduleResolution": "Node",
     "strict": true,
     "esModuleInterop": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "typeRoots": [
+      "./node_modules/@types",
+      "./types"
+    ]
   },
   "include": [
     "**/*.ts"
