--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@liou666/eslint-config",
+  "name": "@liou666/eslint-config-monorepo",
   "type": "module",
   "version": "1.4.1",
   "private": "true",
@@ -20,29 +20,11 @@
     "lint:fix": "eslint . --fix",
     "pub": "pnpm publish  -r --access public",
     "release": "node ./scripts/release ./packages",
-    "build": "tsup"
+    "build:flat": "pnpm --filter @liou666/eslint-config-flat build",
+    "pub:flat": "pnpm publish --filter @liou666/eslint-config-flat --access public"
   },
   "dependencies": {
-    "@antfu/eslint-config": "^3.8.0",
-    "@eslint/compat": "^1.2.2",
-    "@eslint/js": "^9.13.0",
-    "@eslint/markdown": "^6.2.1",
-    "@stylistic/eslint-plugin": "^2.9.0",
-    "@stylistic/eslint-plugin-js": "^2.9.0",
-    "eslint": "^9.13.0",
-    "eslint-plugin-eslint-comments": "^3.2.0",
-    "eslint-plugin-html": "^8.1.2",
-    "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-jsonc": "^2.16.0",
-    "eslint-plugin-markdown": "^5.1.0",
-    "eslint-plugin-n": "^17.11.1",
-    "eslint-plugin-promise": "^7.1.0",
-    "eslint-plugin-react": "^7.37.2",
-    "eslint-plugin-react-hooks": "^5.0.0",
-    "eslint-plugin-unicorn": "^56.0.0",
-    "eslint-plugin-yml": "^1.14.0",
-    "globals": "^15.11.0",
-    "jsonc-eslint-parser": "^2.4.0",
+    "electron": "^33.0.2",
     "react": "^18.3.1",
     "typescript": "^4.8.4",
     "typescript-eslint": "^8.12.2"
@@ -50,9 +32,6 @@
   "devDependencies": {
     "@changesets/changelog-github": "^0.4.7",
     "@changesets/cli": "^2.25.0",
-    "@types/eslint": "^9.6.1",
-    "@typescript-eslint/eslint-plugin": "^8.12.2",
-    "@typescript-eslint/parser": "^8.12.2",
-    "tsup": "^8.3.5"
+    "eslint": "^9.13.0"
   }
 }
